crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__basic-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "sex": "female",
        "group": "typical",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Minimal valid CHAT file with two speakers"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: basic utterances, three standard terminators (. ? !), simple words"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "I",
              "cleaned_text": "I",
              "content": [
                {
                  "type": "text",
                  "content": "I"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "want",
              "cleaned_text": "want",
              "content": [
                {
                  "type": "text",
                  "content": "want"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "some",
              "cleaned_text": "some",
              "content": [
                {
                  "type": "text",
                  "content": "some"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "cookies",
              "cleaned_text": "cookies",
              "content": [
                {
                  "type": "text",
                  "content": "cookies"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "what",
              "cleaned_text": "what",
              "content": [
                {
                  "type": "text",
                  "content": "what"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "kind",
              "cleaned_text": "kind",
              "content": [
                {
                  "type": "text",
                  "content": "kind"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "of",
              "cleaned_text": "of",
              "content": [
                {
                  "type": "text",
                  "content": "of"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "cookies",
              "cleaned_text": "cookies",
              "content": [
                {
                  "type": "text",
                  "content": "cookies"
                }
              ]
            }
          ],
          "terminator": {
            "type": "question"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "chocolate",
              "cleaned_text": "chocolate",
              "content": [
                {
                  "type": "text",
                  "content": "chocolate"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "ones",
              "cleaned_text": "ones",
              "content": [
                {
                  "type": "text",
                  "content": "ones"
                }
              ]
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "word",
              "raw_text": "we",
              "cleaned_text": "we",
              "content": [
                {
                  "type": "text",
                  "content": "we"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "can",
              "cleaned_text": "can",
              "content": [
                {
                  "type": "text",
                  "content": "can"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "make",
              "cleaned_text": "make",
              "content": [
                {
                  "type": "text",
                  "content": "make"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "some",
              "cleaned_text": "some",
              "content": [
                {
                  "type": "text",
                  "content": "some"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "together",
              "cleaned_text": "together",
              "content": [
                {
                  "type": "text",
                  "content": "together"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "sex": "female",
        "group": "typical",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": []
}
